# $Id$
2007-10-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Remove Array type hinting in Security.php. It's not supported in PHP < 5.1.  Fixes  #393

2007-10-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Commited slightly modified patch by Robin Jones to implement #184

2007-09-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Menu.php:  Fix a number of improper call time pass by reference

2007-09-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* locale/gensmarty.pl:  Heads up translators:  There was a bug in the regex; about 20 strings in the smarty templates were missed.
	* Updated french translation

2007-09-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Hopefully fix #384, and remove pages unlikely to be implemented for 1.0
	
2007-09-18 Benoit Grégoire  <bock@step.polymtl.ca>
	* portal/index.php:  Add a call to garbage_collect() to fix #367

2007-09-17 Benoit Grégoire  <bock@step.polymtl.ca>
	* SmartyWifidog:  If ANY of the mandatory dependencies (not just smarty) are missing, user will be redirected to the install script
	* Move Smarty detection and install to common framework.  Take this opportunity to move to upgrade to latest Smarty since people will have to re-run the install script anyway.
	* Fix #381 by applying patch from leandro@texnet.it, mea-culpa, I didn't know I broke the install script.
	
2007-09-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* Scratch a few itches:  Fix the link from node admin to stats, minor CSS fixes

2007-09-11 Benoit Grégoire  <bock@step.polymtl.ca>
	* VitrualHost.php: Close #373: Apply patch from leandro@texnet.it to fix mispelled table name in delete() method
	* Close #374:  Add preliminary italian translation from leandro@texnet.it 
	
2007-09-10 Benoit Grégoire  <bock@step.polymtl.ca>